<resources>
    <string name="app_name">AppScouts</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Acceder</string>
    <string name="title_activity_panel">PanelActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="registro">Registro</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="repeat_password">Repetir contraseña</string>
</resources>
