<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/imageViewLoginIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/flor_de_lis_mundial"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <EditText
        android:id="@+id/editTextloginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textSize="20dp"
        android:padding="3dp"
        android:background="#ce93d8"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginIcon" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:textSize="20dp"
        android:padding="3dp"
        android:background="#ce93d8"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextloginEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextloginEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextloginEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />
</android.support.constraint.ConstraintLayout>